se muestra un customer pasando por un id

--- a/src/app/customer/customer-by-one-list/customer-by-one-list.component.html
+++ b/src/app/customer/customer-by-one-list/customer-by-one-list.component.html
@@ -1,19 +1,19 @@
-<!-- <table class="table" >
-<tbody>
-    <thead>
-      <tr>
-        <th scope="col">Id </th>
-        <th scope="col">Name documentType</th>
-        <th scope="col">Document</th>
-        <th scope="col">fullName</th>
-        <th scope="col">Email</th>
-        <th scope="col">Phone</th>
-        <th scope="col">Password</th>
-        <th scope="col">State</th>
-      </tr>
-    </thead>
-      <tr>
-        <td>{{customer.id}}</td>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Id </th>
+      <th scope="col">Name documentType</th>
+      <th scope="col">Document</th>
+      <th scope="col">fullName</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Password</th>
+      <th scope="col">State</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>{{customer.id}}</td>
         <td>{{customer.documentType.name}}</td>
         <td>{{customer.document}}</td>
         <td>{{customer.fullName}}</td>
@@ -21,7 +21,7 @@
         <td>{{customer.phone}}</td>
         <td>{{customer.password}}</td>
         <td>{{customer.state}}</td>
+    </tr>
+  </tbody>
+</table>
 
-      </tr>
-    </tbody>
-</table> -->
