--- a/src/app/components/login/sign-up/sign-up.component.html
+++ b/src/app/components/login/sign-up/sign-up.component.html
@@ -1,62 +1,72 @@
 <div class="container">
-  <mat-toolbar>
-    <span>New Customer Area</span>
-  </mat-toolbar>
 
-  <mat-card style="margin-top: 10px;">
-    <form [formGroup]="signupForm" (ngSubmit)="createNewCustomer()" style="margin-top: 5%;"> <!--  -->
-      <mat-grid-list cols="1" rowHeight="70px">
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-          <mat-form-field class="datafield">
-            <mat-label> Full Name: </mat-label>
-            <input matInput autocomplete="off" formControlName="fullname">
-          </mat-form-field>
-        </mat-grid-tile>
+  <mat-spinner *ngIf="loading" class="spinner" diameter="100" strokeWidth="15" color="accent" style="margin: 15% auto;">
+  </mat-spinner>
 
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-          <mat-form-field class="datafield">
-            <mat-label> ID Document: </mat-label>
-            <input matInput autocomplete="off" formControlName="document">
-          </mat-form-field>
+  <div *ngIf="!loading">
+    <mat-toolbar style="background-color: rgb(100, 149, 237, .4); ">
+      <h1>New Customer</h1>
+    </mat-toolbar>
 
-        </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-          <mat-form-field class="datafield">
-            <mat-label>Document Type: </mat-label>
-            <mat-select formControlName="documentType">
-              <mat-option *ngFor="let item of documentTypes" [value]="item"> {{item}} </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </mat-grid-tile>
+    <mat-card style="margin-top: 10px; background-color: rgb(95, 158, 160, .4) ;">
 
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-          <mat-form-field class="datafield">
-            <mat-label>E-Mail:</mat-label>
-            <input matInput autocomplete="off" formControlName="email">
-          </mat-form-field>
-        </mat-grid-tile>
+      <form [formGroup]="signupForm" (ngSubmit)="createNewCustomer()" style="margin-top: 5%;">
+        <mat-grid-list cols="1" rowHeight="70px">
 
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-          <mat-form-field class="datafield">
-            <mat-label>Phone: </mat-label>
-            <input matInput autocomplete="off" formControlName="phone">
-          </mat-form-field>
-        </mat-grid-tile>
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field class="datafield">
+              <mat-label> Full Name: </mat-label>
+              <input matInput autocomplete="off" formControlName="fullname">
+            </mat-form-field>
+          </mat-grid-tile>
 
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-          <mat-form-field class="datafield">
-            <mat-label>Password: </mat-label>
-            <input [type]="hide ? 'password' : 'text'" matInput autocomplete="off" formControlName="password">
-            <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            <mat-hint *ngIf="!signupForm.value.password" >Enter your password</mat-hint>
-          </mat-form-field>
-        </mat-grid-tile>
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field class="datafield">
+              <mat-label> ID Document: </mat-label>
+              <input matInput autocomplete="off" formControlName="document">
+            </mat-form-field>
 
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-          <button mat-raised-button (click)="appComp.toHome()" style="margin-right: 20px;">Cancel</button>
-          <button type="submit" [disabled]="signupForm.invalid" mat-raised-button color="primary">Register</button>
-        </mat-grid-tile>
-      </mat-grid-list>
-    </form>
-  </mat-card>
+          </mat-grid-tile>
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field class="datafield">
+              <mat-label>Document Type: </mat-label>
+              <mat-select formControlName="documentType">
+                <mat-option *ngFor="let item of documentTypes" [value]="item"> {{item}} </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </mat-grid-tile>
+
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field class="datafield">
+              <mat-label>E-Mail:</mat-label>
+              <input matInput autocomplete="off" formControlName="email">
+            </mat-form-field>
+          </mat-grid-tile>
+
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field class="datafield">
+              <mat-label>Phone: </mat-label>
+              <input matInput autocomplete="off" formControlName="phone">
+            </mat-form-field>
+          </mat-grid-tile>
+
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field class="datafield">
+              <mat-label>Password: </mat-label>
+              <input [type]="hide ? 'password' : 'text'" matInput autocomplete="off" formControlName="password">
+              <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+              <mat-hint *ngIf="!signupForm.value.password">Enter your password</mat-hint>
+            </mat-form-field>
+          </mat-grid-tile>
+
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <button class="signup-button" mat-raised-button (click)="appComp.toHome()"
+              style="margin-right: 20px;">Cancel</button>
+            <button class="signup-button" type="submit" [disabled]="signupForm.invalid" mat-raised-button
+              color="warn">Register</button>
+          </mat-grid-tile>
+        </mat-grid-list>
+      </form>
+    </mat-card>
+  </div>
 </div>
