--- a/src/app/modules/login/singin/singin.component.html
+++ b/src/app/modules/login/singin/singin.component.html
@@ -8,7 +8,7 @@
       <mat-form-field>
         <input matInput type="password" placeholder="Password" name="password" required formControlName="password" >
       </mat-form-field>
-      <button type="submit" mat-raised-button color="primary">Login</button>
+      <button type="submit" mat-raised-button color="primary" (click)="activeLogin()">Login</button>
       <h3>¿No tienes una cuenta?</h3>
       <button type="submit" mat-raised-button color="primary">Regístrate Aquí</button>
     </form>
