--- a/src/app/modules/login/singup/singup.component.html
+++ b/src/app/modules/login/singup/singup.component.html
@@ -24,9 +24,9 @@
       <mat-form-field>
         <input matInput placeholder="Phone" name="phone" required>
       </mat-form-field>
-      <button mat-raised-button color="primary">Login</button>
+      <button type="submit" mat-raised-button color="primary">Login</button>
       <h3>¿Ya tienes una cuenta? </h3>
-      <button mat-raised-button color="primary">Sing In</button>
+      <button type="submit" mat-raised-button color="primary">Sing In</button>
     </form>
   </mat-card-content>
 </mat-card>
