Commit LazyLoad funcionando

--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -22,7 +22,7 @@
   <a href="#"[routerLink]="['/app-user-profile']">Mis datos</a>
   <a href="#"[routerLink]="['/app-my-accounts']">Mis Cuentas</a>
   <a href="#"[routerLink]="['/']">Depositos</a>
-  <a href="#"[routerLink]="['/app-view-transfers']">Transferencias</a>
+  <a href="#"[routerLink]="['/transactions/app-view-transfers']">Transferencias</a>
   <a href="#"[routerLink]="['/']">Buscar</a>
   <a href="#"[routerLink]="['/app-ejercicio']">Funcional</a>
 </div>
