--- a/src/app/transactions/view-transfers/view-transfers.component.html
+++ b/src/app/transactions/view-transfers/view-transfers.component.html
@@ -2,85 +2,8 @@
 <section class="home"> 
     <div class="cover">
 
-
-        <section class="section about-section gray-bg" id="about">
-            <div class="container">
-                <div class="row align-items-center flex-row-reverse">
-                    <div class="col-lg-6">
-                        <div class="about-text go-to">
-                            <h3 class="dark-color">Mi Perfil</h3>
-                            
-
-                            <div class="row about-list">
-                                <div class="col-md-6">
-
-                                    <div class="media">
-                                        <label>Nombre</label>
-                                        <p>Bruno Fernandez</p>
-                                    </div>
-
-                                    <div class="media">
-                                        <label>N° Documento</label>
-                                        <p>4280966-4</p>
-                                    </div>
-                                    
-                                    <div class="media">
-                                        <label>Tipo de Documento</label>
-                                        <p>Cedula</p>
-                                    </div>
-
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="media">
-                                        <label>E-mail</label>
-                                        <p>info@domain.com</p>
-                                    </div>
-                                    <div class="media">
-                                        <label>Phone</label>
-                                        <p>820-885-3321</p>
-                                    </div>
-                                    
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="about-avatar">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" title="" alt="">
-                        </div>
-                    </div>
-                </div>
-<!--LO BLANCO-->
-
-                <div class="counter">
-                    <div class="row">
-
-                        <div class="col-6 col-lg-3">
-                            <div class="count-data text-center">
-                                <h6 class="count h2" data-to="500" data-speed="500">$ 500</h6>
-                                <p class="m-0px font-w-600">Cuenta Corriente</p>
-                            </div>
-                        </div>
-                        
-                        <div class="col-6 col-lg-3">
-                            <div class="count-data text-center">
-                                <h6 class="count h2" data-to="850" data-speed="850">$ 850</h6>
-                                <p class="m-0px font-w-600">Caja de Ahorro</p>
-                            </div>
-                        </div>                                          
-
-                    </div>
-                </div>
-            </div>
-
-<!--BOTON-->
-
-            <div class= "content-buttom">
-                <button class="boton"  (click)="true"   >Editar</button>
-            </div>
-            
-
-        </section>
+        <H1>VISTA TRANSFERENCIAS</H1>
+        
 
 <!--FONDO Y TRANSPARENCIA-->
 
