Lazy Loading: Login
Creamos login-route.module.ts y configuramos el lazy loading del modulo login

--- a/src/app/modules/shared/toolbar/toolbar.component.html
+++ b/src/app/modules/shared/toolbar/toolbar.component.html
@@ -6,7 +6,7 @@
                   <h2>Banco Tironi</h2>
               </div>
               <ul class="botones">
-                <a href="#"[routerLink]="['/home']">Home</a>
+                <a href="#"[routerLink]="['/login/home']">Home</a>
                 <a href="#"[routerLink]="['/']">Mis datos</a>
                 <a href="#"[routerLink]="['/']">Mis Cuentas</a>
                 <a href="#"[routerLink]="['/deposit']">Depositos</a>
