Lazy Loading: Account
Creamos account-route.module.ts y configuramos el lazy loading del modulo account

--- a/src/app/modules/shared/toolbar/toolbar.component.html
+++ b/src/app/modules/shared/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
               </div>
               <ul class="botones">
                 <a href="#"[routerLink]="['/login/home']">Home</a>
-                <a href="#"[routerLink]="['/']">Mis datos</a>
+                <a href="#"[routerLink]="['/account/user']">Mis datos</a>
                 <a href="#"[routerLink]="['/']">Mis Cuentas</a>
                 <a href="#"[routerLink]="['/deposit']">Depositos</a>
                 <a href="#"[routerLink]="['/transfer']">Transferencias</a>
