Lazy Loading: Components
Creamos components-route.module.ts y configuramos el lazy loading del modulo components

--- a/src/app/modules/shared/toolbar/toolbar.component.html
+++ b/src/app/modules/shared/toolbar/toolbar.component.html
@@ -11,7 +11,7 @@
                 <a href="#"[routerLink]="['/']">Mis Cuentas</a>
                 <a href="#"[routerLink]="['/deposit']">Depositos</a>
                 <a href="#"[routerLink]="['/transfer']">Transferencias</a>
-                <a href="#"[routerLink]="['/search']">Buscar</a>
+                <a href="#"[routerLink]="['/components/search']">Buscar</a>
                 <a href="#"[routerLink]="['/ejercicio']">Funcional</a>
                 <a href="#" (click)="logOut()">Log Out</a>
               </ul>
