Lazy Loading: Transactions
Creamos transaction-route.module.ts y configuramos el lazy loading del modulo transaction

--- a/src/app/modules/shared/toolbar/toolbar.component.html
+++ b/src/app/modules/shared/toolbar/toolbar.component.html
@@ -8,11 +8,9 @@
               <ul class="botones">
                 <a href="#"[routerLink]="['/login/home']">Home</a>
                 <a href="#"[routerLink]="['/account/user']">Mis datos</a>
-                <a href="#"[routerLink]="['/']">Mis Cuentas</a>
-                <a href="#"[routerLink]="['/deposit']">Depositos</a>
-                <a href="#"[routerLink]="['/transfer']">Transferencias</a>
+                <a href="#"[routerLink]="['/transactions/deposit']">Depositos</a>
+                <a href="#"[routerLink]="['/transactions/transfer']">Transferencias</a>
                 <a href="#"[routerLink]="['/components/search']">Buscar</a>
-                <a href="#"[routerLink]="['/ejercicio']">Funcional</a>
                 <a href="#" (click)="logOut()">Log Out</a>
               </ul>
           </nav>
