Saving before going to Dev branch

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,15 @@
 <app-navbar></app-navbar>
 
-<!-- This area is for all the components in the main page -->
-<nav *ngIf="isGoingHome && isInPublicZone"> <app-login></app-login> </nav>
-<nav *ngIf="isLoggingIn && isInPublicZone"> <app-sign-in></app-sign-in></nav>
-<nav *ngIf="isRegistering && isInPublicZone"> <app-sign-up></app-sign-up> </nav>
+<div *ngIf="isInPublicZone">
+  <!-- This area is for all the components in the main page -->
+  <nav *ngIf="isGoingHome"> <app-login></app-login> </nav>
+  <nav *ngIf="isLoggingIn"> <app-sign-in></app-sign-in></nav>
+  <nav *ngIf="isRegistering"> <app-sign-up></app-sign-up> </nav>
+</div>
+<!--TODO: hacer logout component y mostrarlo al salir del desktop -->
 
-<!-- TODO: hacer logout component y mostrarlo al salir del desktop -->
+
+
+
 
 <router-outlet></router-outlet>
