--- a/src/app/UserProfile/account/account.component.html
+++ b/src/app/UserProfile/account/account.component.html
@@ -1,29 +1,65 @@
-<div class="d-flex align-items-center" style="background-color: rgba(255, 255, 255, 0.5);">
+<div class="d-flex align-items-center" style="background-color: rgba(220, 220, 220, 0.5);">
   <div class="container">
-    <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-center">
       <div class="d-flex flex-column align-items-start">
-        <div class="my-3">
-          <button (click)="openEditModal()" class="btn btn-primary">Agregar tipo de cuenta</button>
-        </div>
-        <div class="my-3">
-          <button (click)="openEditModal2()" class="btn btn-primary">Agregar depósito</button>
-        </div>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">ID de Cuenta</th>
+              <th scope="col">Tipo de Cuenta </th>
+              <th scope="col">Balance</th>
+              <th scope="col">Estado</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let account of accountUser">
+              <td>{{ account.id }}</td>
+              <td>{{ account.accountType.name }}</td>
+              <td>${{ account.acc_Balance }}</td>
+              <td>{{ account.state ? 'Activo' : 'Inactivo' }}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-      <div class="d-flex flex-column" style="width: 250px;">
-        <img alt="fotoperfil" [src]="customer?.avatarUrl || 'https://i.pinimg.com/474x/bd/f4/d3/bdf4d3fe1f9a17136319df951fe9b3e0.jpg'" class="rounded-circle w-100 h-100 mt-3">
-        <h4 class="mt-3">Nombre completo: <ng-container *ngIf="customer">{{ customer.fullName }}</ng-container></h4>
-        <h4 class="font-weight-bold mt-3">Id de Cuenta: <ng-container *ngIf="accountType">{{ accountType.id }}</ng-container></h4>
-        <h4 class="font-weight-bold mt-3">Tipo de Cuenta: <ng-container *ngIf="accountType">{{ accountType.name }}</ng-container></h4>
-        <p class="mt-3">Balance: <span class="font-weight-bold">$100</span></p>
-      </div>
-      <div class="d-flex flex-column align-items-end">
-        <div class="my-3">
-          <button [routerLink]="['/customer']" class="btn btn-danger">Cambios de cuenta</button>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<div class="d-flex align-items-center mt-3" style="background-color: rgba(255, 255, 255, 0.5);">
+  <div class="container">
+    <div class="d-flex flex-column align-items-center mt-3" style="width: 200px;">
+      <div class="card">
+        <img alt="fotoperfil" [src]="customer?.avatarUrl || 'https://i.pinimg.com/474x/bd/f4/d3/bdf4d3fe1f9a17136319df951fe9b3e0.jpg'" class="card-img-top rounded-circle mt-3" style="width: 100px; height: 100px;">
+        <div class="card-body d-flex flex-column">
+          <h4 class="card-title mt-3 text-center">Nombre: {{ customer?.fullName }}</h4>
+          <h6 class="card-subtitle mb-2 text-muted mt-3 text-center" style="font-size: smaller;">Id de Usuario: {{ customer?.id }}</h6>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
+
+  <div class="d-flex mt-3 justify-content-between">
+    <div class="d-flex flex-column align-items-start">
+      <div class="my-3">
+        <button (click)="openEditModal()" class="btn btn-primary">Agregar tipo de cuenta</button>
+      </div>
+      <div class="my-3">
+        <button (click)="openEditModal2()" class="btn btn-primary">Agregar depósito</button>
+      </div>
+    </div>
+    <div class="d-flex flex-column align-items-end">
+      <div class="my-3">
+        <button [routerLink]="['/customer']" class="btn btn-danger">Cambios de cuenta</button>
+      </div>
+    </div>
+  </div>
 
 <ng-template #content let-modal>
   <div class="modal-header">
