--- a/src/app/UserProfile/account/account.component.scss
+++ b/src/app/UserProfile/account/account.component.scss
@@ -1,12 +1,40 @@
-.circular--portrait {
-  position: relative;
+.profile-card {
+  background-color: rgba(255, 255, 255, 0.5);
   width: 200px;
-  height: 200px;
-  overflow: hidden;
-  border-radius: 50%;
 }
 
-.circular--portrait img {
+.btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.add-account-btn, .add-deposit-btn, .change-account-btn {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-size: 14px;
+}
+
+.change-account-btn {
+  background-color: #dc3545;
+  margin-top: 10px;
+}
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.btn-container {
   width: 100%;
-  height: auto;
+}
+
+.card {
+  width: 20rem;
+}
+
+.card-text {
+  font-size: larger;
 }
