--- a/src/app/UserProfile/account/create-account-type/createaccounttype.component.html
+++ b/src/app/UserProfile/account/create-account-type/createaccounttype.component.html
@@ -4,16 +4,16 @@
       <form>
         <div class="form-group">
           <label for="accountType">Tipo de Cuenta</label>
-          <select class="form-control" formControlName="documentType" id="accountType">
+          <select (change)="updateAccountType($event)" class="form-control" formControlName="documentType" id="accountType">
             <option>Cuenta Pesos </option>
             <option>Cuenta Dolares</option>
           </select>
         </div>
         <div class="form-group">
-          <label for="name">Nombre para su cuenta :</label>
-          <input type="text" class="form-control" id="name" name="name">
+          <label     for="name">Nombre para su cuenta :</label>
+          <input  (input)="updateName($event)" type="text" class="form-control" id="name" name="name">
         </div>
-        <button type="submit" class="btn btn-primary">Validar</button>
+        <button (click)="createAccount()" class="btn btn-primary">Validar</button>
       </form>
     </div>
   </div>
