--- a/src/app/customer-account/my-accounts/my-accounts.component.html
+++ b/src/app/customer-account/my-accounts/my-accounts.component.html
@@ -1,13 +1,13 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-<div class="container">
+<div class="container"    *ngFor="let index of accounts">
     <div class="row">
       
         <div class="col-md-4 col-xl-3">
             <div class="card bg-c-blue order-card">
                 <div class="card-block">
                     <h6 class="m-b-20">Cuenta Corriente</h6>
-                    <h2 class="text-right"><i class="fa fa-money"></i><span>  $ 486</span></h2>
+                    <h2 class="text-right"><i class="fa fa-money"></i><span>  $ {{index.balance}}</span></h2>
                     <p class="m-b-0">Monto Total<span class="f-right"></span></p>
                 </div>
             </div>
@@ -17,7 +17,7 @@
             <div class="card bg-c-green order-card">
                 <div class="card-block">
                     <h6 class="m-b-20">Caja de Ahorro</h6>
-                    <h2 class="text-right"><i class="fa fa-money"></i><span>  $ 1290</span></h2>
+                    <h2 class="text-right"><i class="fa fa-money"></i><span>  $ {{index.accountType.name}}</span></h2>
                     <p class="m-b-0">Monto Total<span class="f-right"></span></p>
                 </div>
             </div>
