--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<div *ngIf="isInPublicZone">
+<div *ngIf="authService.getIsPublicZone()">
   <!-- This area is for all the components in the main page -->
   <nav *ngIf="isGoingHome"> <app-login></app-login> </nav>
   <nav *ngIf="isLoggingIn"> <app-sign-in></app-sign-in></nav>
