--- a/src/app/customer-account/user-profile/user-profile.component.scss
+++ b/src/app/customer-account/user-profile/user-profile.component.scss
@@ -19,158 +19,49 @@
   
   }
 
-//**************************************************************************************************
-
-.container{
-    position: relative;
-    justify-content: center;
-    margin: auto;
-    margin-top: 150px;
-    color :#f5f6fa
-}
-
-
-body {
-    margin: 0;
-    padding-top: 40px;
-    color: #2e323c;
-    background: #f5f6fa;
-    position: relative;
-    height: 100%;
-}
-.account-settings .user-profile {
-    margin: 0 0 1rem 0;
-    padding-bottom: 1rem;
-    text-align: center;
-}
-.account-settings .user-profile .user-avatar {
-    margin: 0 0 1rem 0;
-    
-}
-.account-settings .user-profile .user-avatar img {
-    width: 90px;
-    height: 90px;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    border-radius: 100px;
-}
-.account-settings .user-profile h5.user-name {
-    margin: 0 0 0.5rem 0;
-}
-.account-settings .user-profile h6.user-email {
-    margin: 0;
-    font-size: 0.8rem;
-    font-weight: 400;
-    color: #fe6047;
-}
-.account-settings .about {
-    margin: 2rem 0 0 0;
-    text-align: center;
-}
-.account-settings .about h5 {
-    margin: 0 0 15px 0;
-    color: #5eaeef;
-    font-size: x-large;
-}
-
-
-.user-name {
-    color: #ffffff;
-    font-size: x-large;
-}
-
-
-.account-settings .about p {
-    font-size: 0.825rem;
-}
-.form-control {
-    border: 1px solid #cfd1d8;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    font-size: .825rem;
-    background: #ffffff;
-    color: #2e323c;
-}
-
-.card {
-    background: #212127;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    border: 0;
-    margin-bottom: 1rem;
-    color: #ffffff;
-}
-
-.cabeza {
-    color: #5eaefff2;
-    font-size: x-large;
-    margin-top: 15px;
-}
-
-//**********************************************************************************************
-
-.text-right{
-    
-    display: flex;
-    justify-content: right;
-    
-}
-
-.boton {
-    width: 25%;
-    background: #fe6047;
-    border: none;
-    padding: 12px;
-    color: white;
-    //margin: 18px 0;
-    font-size: 16px;
-    
-    margin-left: 20px;
-    margin-top: 30px;
-    
-  }
-  
-  .boton:hover{
-    background-color: #5eaefff2;
-  }
 
 //**********************************CUSTOMER VIEW**********************************
 
   
-.container2{
+.container{
     position: relative;
     justify-content: center;
-    
+    width: 800px;
+    padding-bottom: 100px;
+         
   }
 
 // TAMAÑO DE LA TARJETA
+/*
   body{
-    color: #6F8BA4;   
-}
-
-.media{
-    width: 130PX;
+    color: #6F8BA4;
     
 }
+*/
+
+/*
+.media{
+    width: 100PX;
+    
+}
+*/
 
 .section {
-    padding: 80px ;
+    padding: 40px ;
     position: relative;   
 }
 
 .gray-bg {
     background-color: #212127; //COLOR DE LA TARJETA
     color: #ffffff;
- 
+  
 }
 
 
 img {
     max-width: 60%;
     margin-left: 40px;
-    margin-bottom: 20px;
+    
 }
 img {
     vertical-align: middle;
@@ -194,7 +85,7 @@ img {
 }
 
 .about-list .media {
-  padding: 5px 0;
+  padding: 8px 0;
   width: 150PX;
 }
 
@@ -202,7 +93,6 @@ img {
   color: #fe6047;
   font-weight: 500;
   width: 150px;
-  margin: 0;
   position: relative;
   font-size: 14px;
 }
@@ -214,7 +104,7 @@ img {
   width: 150PX;
 }
 
-//cosa blanca
+//RECUADRO BLANCO
 .about-section .counter {
   padding: 18px 18px;
   background: #ffffff;
@@ -224,12 +114,12 @@ img {
   color: #000000;
 
 }
+/*
 .about-section .counter .count-data {
   margin-top: 10px;
   margin-bottom: 10px;
-  
-  
 }
+*/
 .about-section .counter .count {
   font-weight: 700;
   color: #20247b;
@@ -254,11 +144,11 @@ img {
 
 .content-buttom{
     display: flex;
-    justify-content: right;
+    justify-content: center;
 
 }
 
-.boton2 {
+.boton {
     width: 100%;
     background: #fe6047;
     border: none;
@@ -266,12 +156,10 @@ img {
     color: white;
     //margin: 18px 0;
     font-size: 16px;
-    
-    margin-left: 20px;
     margin-top: 30px;
     
   }
     
-  .boton2:hover{
+  .boton:hover{
     background-color: #5eaefff2;
   }
