--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -20,6 +20,9 @@
         <td>{{customer.email}}</td>
         <td>{{customer.phone}}</td>
         <td>{{customer.password}}</td>
+        <td>
+          <a class = "btn btn-outline-success" (click)="editar(customer.id)" >Editar</a>
+        </td>
 
       </tr>
     </tbody>
