--- a/src/app/customer/update/update.component.html
+++ b/src/app/customer/update/update.component.html
@@ -2,7 +2,7 @@
 <div style="margin-left: 30%;">
     <form (ngSubmit)="send()" [formGroup]="FormUpDate" class="align-items-center"> 
       <section>
-        <h1 style="margin: 15px;color:rgb(8, 82, 141);"> Registrarse</h1>
+        <h1 style="margin: 15px;color:rgb(8, 82, 141);"> Up Date</h1>
       </section>
   
       <!-- <div class="col-md-6">
