--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -13,11 +13,11 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link"  routerLink="/account/find-all">Account</a>
+            <a class="nav-link"  routerLink="/account/find-all">Accounts</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" routerLink="/customerList">Customer</a>
+            <a class="nav-link" routerLink="/customerList">Customers</a>
           </li>
           
           <li class="nav-item">
