--- a/src/app/account/account-list/account-list.component.html
+++ b/src/app/account/account-list/account-list.component.html
@@ -1,3 +1,5 @@
+<div class="contenedor">
+<a class = "btn btn-outline-success" routerLink="/account/create" >Create Account</a>
 <table class="table" >
     <thead>
       <tr>
@@ -15,7 +17,11 @@
         <td>{{account.account_type_id.name}}</td>
         <td>{{account.balance}}</td>
         <td>{{account.state}}</td>
+        <td>
+          <a class = "btn btn-outline-success" (click)="editar(account.id)" >Editar</a>
+        </td>
       </tr>
     </tbody>
 </table>
 
+</div>
