--- a/src/app/account/create-account/create-account.component.html
+++ b/src/app/account/create-account/create-account.component.html
@@ -1,24 +1,28 @@
+
+
 <h1 class="text-lg-center"> Create Account </h1>
-<div class="input-group mb-3">
-    <span class="input-group-text" id="inputGroup-sizing-default">Type Account</span>
-    <input type="text" class="form-control"  aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-</div>
-<div class="input-group mb-3">
-    <span class="input-group-text" id="inputGroup-sizing-default">Customer Id</span>
-    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-</div>
-<div class="col-12">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-      <label class="form-check-label" for="invalidCheck">
-        Agree to terms and conditions
-      </label>
-      <div class="invalid-feedback">
-        You must agree before submitting.
+<div class="contenedor">
+  <div class="input-group mb-3">
+      <span class="input-group-text" id="inputGroup-sizing-default">Type Account</span>
+      <input type="text" class="form-control"  aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+  </div>
+  <div class="input-group mb-3">
+      <span class="input-group-text" id="inputGroup-sizing-default">Customer Id</span>
+      <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+  </div>
+  <div class="col-12">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+        <label class="form-check-label" for="invalidCheck">
+          Agree to terms and conditions
+        </label>
+        <div class="invalid-feedback">
+          You must agree before submitting.
+        </div>
       </div>
     </div>
+    <a routerLink="/account/account-type/create">Create Type Account</a>
+    <div class="col-12">
+      <button class="btn btn-primary" type="submit" routerLink="account/find-all" routerLinkActive="router-link-active" >Confirm</button>
   </div>
-  <a href="account/account-type/create">Create Type Account</a>
-  <div class="col-12">
-    <button class="btn btn-primary" type="submit" routerLink="account/find-all" routerLinkActive="router-link-active" >Confirm</button>
-  </div>
+</div>
